use nuprocess to start external processes